# Raina

./: .gitignore  CMakeLists.txt  README.md  Raina.qrc  main.cpp
Base/: CMakeLists.txt  LanguageManager.cpp  LanguageManager.h  RainaCore.cpp  RainaCore.h  Scene.cpp  Scene.h  Source.cpp  Source.h
Chain/: CMakeLists.txt  Request.cpp  Request.h  RequestStrategy.cpp  RequestStrategy.h  RequestStrategyFactory.cpp
NotifyEvent/: CMakeLists.txt  ChangeManager.cpp  ChangeManager.h  NotifyEvent.cpp  NotifyEvent.h
Resources/: logo.icns  main.qss
Resources/Resources-win/: Raina.rc
Ui/: CMakeLists.txt  CurrentSourceInfoWidget.cpp  CurrentSourceInfoWidget.h  CurrentSourceInfoWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PropertyWidget.cpp  PropertyWidget.h  ScreenWidget.cpp  ScreenWidget.h
Ui/Dialog/: SettingDialog.cpp  SettingDialog.h  SettingDialog.ui
Ui/DockWidget/: AudioMixerWidget.cpp  AudioMixerWidget.h  AudioMixerWidget.ui  ControlWidget.cpp  ControlWidget.h  ControlWidget.ui  SceneWidget.cpp  SceneWidget.h  SceneWidget.ui  SourceWidget.cpp  SourceWidget.h  SourceWidget.ui
lan/English/: ui.ini
lan/Korean/: ui.ini
